--- a/home.html
+++ b/home.html
@@ -3,9 +3,19 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>HOME</title>
 </head>
 <body>
+    <header>
+        <div class="topnav">
+            <a class="active" href="#home">HOME</a>
+            <a href="#assesments">CONFIDENTIAL ASSESMENTS</a>
+            <a href="#therapy">ONLINE THERAPY SESSIONS</a>
+            <a href="#community">COMMUNITY CONNECT</a>
+            <a href="#self-help">SELF HELP RESOURCES</a>
+            <a href="#profile">PROFILE</a>
+            
+          </div>
     <section class="about us">
         <h2>ABOUT US</h2>
         <p>Welcome to Inner Compass! We're not just a web application; we're your trusted companion on your mental health journey. With us, you can connect with licensed professionals, dive into supportive peer communities, and explore a wealth of educational resources—all tailored to your needs. Our platform is designed to be safe, inclusive, and easy to navigate, ensuring that everyone feels welcome and supported. Let's navigate this journey together, breaking down barriers and prioritizing mental well-being, one step at a time. Join us, and let's embark on this empowering adventure together!</p><br/>
