--- a/home.html
+++ b/home.html
@@ -4,19 +4,54 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>HOME</title>
+    <style>
+        body {
+            margin: 0;
+        }
+        header {
+            background-color: #59D5E0;
+        }
+        .topnav {
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            gap: 15px;
+        }
+        .about_us {
+            background-color: #F5DD61;
+            margin: 0;
+        }
+        .services {
+            background-color: #FAA300;
+            margin: 0;
+        }
+        .clients {
+            background-color: #F4538A;
+        }
+        .our_team {
+            background-color: #59D5E0;
+        }
+        footer {
+            background-color: #111;
+            color: white;
+        }
+    </style>
 </head>
 <body>
     <header>
         <div class="topnav">
             <a class="active" href="#home">HOME</a>
-            <a href="#assesments">CONFIDENTIAL ASSESMENTS</a>
-            <a href="#therapy">ONLINE THERAPY SESSIONS</a>
+            <a href="#assesments">ASSESMENTS</a>
+            <a href="#therapy">THERAPY</a>
             <a href="#community">COMMUNITY CONNECT</a>
-            <a href="#self-help">SELF HELP RESOURCES</a>
+            <a href="#self-help">RESOURCES</a>
             <a href="#profile">PROFILE</a>
           </div>
     </header>
-    <section class="about us">
+    <section class="landing">
+        
+    </section>
+    <section class="about_us">
         <h2>ABOUT US</h2>
         <p>Welcome to Inner Compass! We're not just a web application; we're your trusted companion on your mental health journey. With us, you can connect with licensed professionals, dive into supportive peer communities, and explore a wealth of educational resources—all tailored to your needs. Our platform is designed to be safe, inclusive, and easy to navigate, ensuring that everyone feels welcome and supported. Let's navigate this journey together, breaking down barriers and prioritizing mental well-being, one step at a time. Join us, and let's embark on this empowering adventure together!</p><br/>
     </section>
@@ -57,7 +92,7 @@
                 Michael: Received immediate assistance and guidance from our crisis intervention support team during a moment of acute distress.</p>
 
     </section>
-    <section class="our team">
+    <section class="our_team">
         <p>
             At Inner Compass, our team is comprised of dedicated individuals passionate about revolutionizing mental healthcare and supporting individuals on their journey to wellness. Meet the faces behind our mission:
         </p>
