--- a/selfhelp.html
+++ b/selfhelp.html
@@ -17,9 +17,7 @@
           </div>
     </header>
     <section class="writeup">
-            <p>Introduction to Self-Help Resources:
-
-                Empowering yourself to take control of your mental well-being is a journey worth embarking on. At Inner Compass, we believe in providing you with the tools and resources you need to support your own growth and healing. Our self-help resources section is curated with care, offering a diverse range of content to meet your unique needs and interests. From guided mindfulness exercises and soothing music to insightful articles and interactive tools, our platform is your go-to destination for holistic self-care. Whether you're looking to manage stress, improve your mood, or simply explore new avenues for personal growth, our self-help resources are here to support you every step of the way. Take the first step towards a healthier, happier you by diving into our self-help resources today.</p>
+            <p>Empowering yourself to take control of your mental well-being is a journey worth embarking on. At Inner Compass, we believe in providing you with the tools and resources you need to support your own growth and healing. Our self-help resources section is curated with care, offering a diverse range of content to meet your unique needs and interests. From guided mindfulness exercises and soothing music to insightful articles and interactive tools, our platform is your go-to destination for holistic self-care. Whether you're looking to manage stress, improve your mood, or simply explore new avenues for personal growth, our self-help resources are here to support you every step of the way. Take the first step towards a healthier, happier you by diving into our self-help resources today.</p>
     </section>
     
 </body>
