--- a/assesments.html
+++ b/assesments.html
@@ -5,19 +5,54 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>CONFIDENTIAL ASSESMENTS</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <style>
+        body {
+            margin: 0;
+            display: flex;
+            flex-direction: column;
+        }
+        header {
+            font-size: larger;
+            font-weight: 800;
+        }
+        .topnav {
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            gap: 40px;
+            text-decoration: none;
+        }
+        .topnav>a {
+            background-color: #F2E4C9;
+            padding: 15px;
+            color: #111;
+        }
+    </style>
 </head>
 <body>
-    <header>
-        <div class="topnav">
-            <a href="#home">HOME</a>
-            <a  class="active" href="#assesments">CONFIDENTIAL ASSESMENTS</a>
-            <a href="#therapy">ONLINE THERAPY SESSIONS</a>
-            <a href="#community">COMMUNITY CONNECT</a>
-            <a href="#self-help">SELF HELP RESOURCES</a>
-            <a href="#profile">PROFILE</a>
-            
-          </div>
-    </header>
+
+        <header>
+            <div class="container">
+                <header class="d-flex flex-wrap align-items-center justify-content-center justify-content-md-between py-3 mb-4 border-bottom">
+                  <div class="col-md-1 mb-2 mb-md-0">
+                    <a href="/" class="d-inline-flex link-body-emphasis text-decoration-none">
+                        <img src="./Images/logo-for-mental-health-include-compass (1).jpeg" width="50">
+                    </a>
+                  </div>
+                  <ul class="nav col-12 col-md-auto mb-2 justify-content-center mb-md-0">
+                    <li><a href="#" class="nav-link px-2" style="color: #111;">HOME</a></li>
+                    <li><a href="#" class="nav-link px-2" style="color: #111;">ASSESSMENTS</a></li>
+                    <li><a href="#" class="nav-link px-2" style="color: #111;">THERAPY</a></li>
+                    <li><a href="#" class="nav-link px-2" style="color: #111;">COMMUNITY CONNECT</a></li>
+                    <li><a href="#" class="nav-link px-2" style="color: #111;">RESOURCES</a></li>
+                  </ul>
+                  <div class="col-md-1 text-end">
+                    <img src="./Images/user.gif" width="70">
+                  </div>
+                </header>
+              </div>
+        </header>
+    
           <section class="writeup">
             <p>Embarking on a journey towards improved mental well-being begins with understanding where you currently stand. At Inner Compass, we offer confidential assessments designed to provide insight into your mental health and help you chart a path towards greater wellness. Our assessments are carefully crafted to respect your privacy and confidentiality while providing valuable insights that can guide you on your journey. Whether you're exploring therapy options, seeking to understand your current mental state, or simply curious about areas for potential growth, our assessments are here to support you every step of the way. Take the first step towards a brighter future by embarking on a confidential assessment journey with Inner Compass today.</p>
           </section>
