--- a/therapy.html
+++ b/therapy.html
@@ -5,16 +5,45 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>ONLINE THERAPY SESSIONS</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <style>
+        header {
+            font-size: larger;
+            font-weight: 800;
+        }
+        .topnav {
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            gap: 40px;
+            text-decoration: none;
+        }
+        .topnav>a {
+            background-color: #F2E4C9;
+            padding: 15px;
+            color: #111;
+        }
+    </style>
 </head>
 <body>
     <header>
-        <div class="topnav">
-            <a href="#home">HOME</a>
-            <a href="#assesments">CONFIDENTIAL ASSESMENTS</a>
-            <a class="active" href="#therapy">ONLINE THERAPY SESSIONS</a>
-            <a href="#community">COMMUNITY CONNECT</a>
-            <a href="#self-help">SELF HELP RESOURCES</a>
-            <a href="#profile">PROFILE</a>
+        <div class="container">
+            <header class="d-flex flex-wrap align-items-center justify-content-center justify-content-md-between py-3 mb-4 border-bottom">
+              <div class="col-md-1 mb-2 mb-md-0">
+                <a href="/" class="d-inline-flex link-body-emphasis text-decoration-none">
+                    <img src="./Images/logo-for-mental-health-include-compass (1).jpeg" width="50">
+                </a>
+              </div>
+              <ul class="nav col-12 col-md-auto mb-2 justify-content-center mb-md-0">
+                <li><a href="#" class="nav-link px-2" style="color: #111;">HOME</a></li>
+                <li><a href="#" class="nav-link px-2" style="color: #111;">ASSESSMENTS</a></li>
+                <li><a href="#" class="nav-link px-2" style="color: #111;">THERAPY</a></li>
+                <li><a href="#" class="nav-link px-2" style="color: #111;">COMMUNITY CONNECT</a></li>
+                <li><a href="#" class="nav-link px-2" style="color: #111;">RESOURCES</a></li>
+              </ul>
+              <div class="col-md-1 text-end">
+                <img src="./Images/user.gif" width="70">
+              </div>
+            </header>
           </div>
     </header>
     <section class="writeup">
