--- a/therapy.html
+++ b/therapy.html
@@ -9,6 +9,7 @@
         header {
             font-size: larger;
             font-weight: 800;
+            background-color:white ;
         }
         .topnav {
             display: flex;
@@ -22,6 +23,76 @@
             padding: 15px;
             color: #111;
         }
+       
+.appointment {
+  background-color: #fee252;;
+  padding: 20px;
+  border-radius: 10px;
+  width: 80%;
+  margin: 0 auto;
+}
+
+form {
+  font-family: Arial, sans-serif;
+}
+
+label {
+  font-weight: bold;
+  color: #333;
+}
+
+input[type="date"],
+input[type="text"],
+input[type="number"],
+textarea {
+  width: 100%;
+  padding: 10px;
+  margin-bottom: 10px;
+  border: 1px solid #ccc;
+  border-radius: 5px;
+  background-color:#F1EF99;
+}
+
+input[type="radio"] {
+  margin-right: 5px;
+  background-color:#F1EF99;
+}
+
+
+input[type="submit"] {
+background-color:#F1EF99;
+  color: white;
+  padding: 10px 20px;
+  border: none;
+  border-radius: 5px;
+  cursor: pointer;
+}
+
+input[type="submit"]:hover {
+  background-color: #45a049;
+}
+
+textarea {
+  resize: none;
+  background-color:#F1EF99;
+}
+
+
+datalist {
+  margin-bottom: 10px;
+  background-color:#F1EF99;
+}
+
+ form p {
+  font-weight: bold;
+  color: #333;
+  margin-top: 10px;
+}
+body{
+    background-color:#43ccb8;
+}
+
+
     </style>
 </head>
 <body>
@@ -49,11 +120,40 @@
     <section class="writeup">
             <p>In today's fast-paced world, finding time for self-care can feel like a challenge. That's where online therapy comes in. At Inner Compass, we offer convenient and accessible online therapy sessions that allow you to prioritize your mental health from the comfort of your own home. Our platform connects you with qualified therapists who are dedicated to supporting you on your journey towards greater well-being. Whether you're navigating life transitions, coping with stress, or managing mental health conditions, our online therapy sessions provide a safe and confidential space for you to explore your thoughts and emotions. With flexible scheduling options and the ability to connect from anywhere with an internet connection, online therapy has never been more accessible. Take the first step towards positive change and schedule an online therapy session with Inner Compass today.</p>
     </section>
-    
-</body>
-<footer>
+    <section class="appointment">
+        <form>
+            <label for="q1">Schedule a date for the appointment </label><br/>
+            <input type="date" placeholder="dd/mm/yy" id="q1"><br/>
+            <p>Select the desired time slot</p>
+            <input list="timings" name="timings">
+            <datalist id="timings" style="background-color:#F1EF99;">
+              <option value="10.a.m.">
+              <option value="2.p.m.">
+              <option value="6.p.m.">
+            </datalist>
+            <p>Patient details</p>
+            <label for="q3">Enter name: </label><br/>
+            <input type="text" placeholder="Name" id="q3"><br/>
+            <label for="q4">Enter age:</label><br/>
+            <input type="number" placeholder="00" id="q4"><br/>
+            <p>Enter gender:</p>
+            <input type="radio" id="male" name="gender" value="Male">
+            <label for="male">Male</label><br>
+            <input type="radio" id="female" name="gender" value="Female">
+            <label for="female">Female</label><br>
+            <input type="radio" id="other" name="gender" value="Others">
+            <label for="other">Others</label><br>
+            <p>Write your problem:</p>
+            <textarea name="message" style="width:400px; height:200px;">
+            </textarea>
+
+
+        </form>
+    </section>
+
+<footer style="background-color: white;">
     <div class="container">
-        <footer class="row row-cols-1 row-cols-sm-2 row-cols-md-5 py-5 my-5 border-top">
+        <footer class="row row-cols-1 row-cols-sm-2 row-cols-md-5 py-5 my-5 border-top" >
           <div class="col mb-3">
             <a href="/" class="d-flex align-items-center mb-3 link-body-emphasis text-decoration-none">
               <svg class="bi me-2" width="40" height="32"><use xlink:href="#bootstrap"></use></svg>
@@ -90,4 +190,5 @@
       </div>
 </footer>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
+</body>
 </html>
