--- a/virtualpet.html
+++ b/virtualpet.html
@@ -101,7 +101,7 @@ button:hover {
         The "Virtual Pets" section offers an interactive experience where users can care for and play with virtual pets. Users can choose between different pets, such as dogs or cats, and engage in activities like feeding and playing. This section provides a fun and engaging way for users to experience the joys of pet ownership without the responsibilities of real-life pets. With simple controls and adorable visuals, users can enjoy hours of entertainment while nurturing their virtual companions.</p>
     <div class="pet-container">
       <div class="pet">
-        <img src="./dog.gif" alt="Dog">
+        <img src="./dogg.gif" alt="Dog">
         <h3>Dog</h3>
         <button onclick="feedPet('dog')">Feed</button>
         <button onclick="playWithPet('dog')">Play</button>
