--- a/resource.html
+++ b/resource.html
@@ -9,6 +9,16 @@
         header {
             font-size: larger;
             font-weight: 800;
+            background-color: white;
+        }
+        body{
+            background-color: #73ccd0;
+            display: flex;
+            flex-direction: column;
+            gap: 100px;
+        }
+        section {
+            text-align: center;
         }
     </style>
 </head>
@@ -34,14 +44,53 @@
             </header>
           </div>
     </header>
-    <section class="writeup">
-        <div class="container">
-            <p>Empowering yourself to take control of your mental well-being is a journey worth embarking on. At Inner Compass, we believe in providing you with the tools and resources you need to support your own growth and healing. Our self-help resources section is curated with care, offering a diverse range of content to meet your unique needs and interests. From guided mindfulness exercises and soothing music to insightful articles and interactive tools, our platform is your go-to destination for holistic self-care. Whether you're looking to manage stress, improve your mood, or simply explore new avenues for personal growth, our self-help resources are here to support you every step of the way. Take the first step towards a healthier, happier you by diving into our self-help resources today.</p>
+    <section class="container writeup">
+        <h1>SELF HELP RESOURCES</h1>
+        <p class="lead" style="font-weight: 600; text-align:justify;">Empowering yourself to take control of your mental well-being is a journey worth embarking on. At Inner Compass, we believe in providing you with the tools and resources you need to support your own growth and healing. Our self-help resources section is curated with care, offering a diverse range of content to meet your unique needs and interests. From guided mindfulness exercises and soothing music to insightful articles and interactive tools, our platform is your go-to destination for holistic self-care. Whether you're looking to manage stress, improve your mood, or simply explore new avenues for personal growth, our self-help resources are here to support you every step of the way. Take the first step towards a healthier, happier you by diving into our self-help resources today.</p>
+    </section>
+    <section class="music">
+        <h2>SOOTHING MUSIC</h2>
+        <div class="happy my-5">
+            <h5>DELIGHTED</h5>
+            <iframe style="border-radius:12px" src="https://open.spotify.com/embed/playlist/0RH319xCjeU8VyTSqCF6M4?utm_source=generator" width="75%" height="352" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
+        </div>
+        <div class="sad">
+            <h5>DISHEARTENED</h5>
+            <iframe style="border-radius:12px" src="https://open.spotify.com/embed/playlist/6nxPNnmSE0d5WlplUsa5L3?utm_source=generator" width="75%" height="352" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
+        </div>
+        <div class="angry">
+            <h4>FURIOUS</h4>
+            <iframe style="border-radius:12px" src="https://open.spotify.com/embed/playlist/37i9dQZF1EIgNZCaOGb0Mi?utm_source=generator" width="75%" height="352" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
+        </div>
+        <div class="betrayed">
+            <h4>DECIEVED</h4>
+            <iframe style="border-radius:12px" src="https://open.spotify.com/embed/playlist/6E1hf6VZ5QwvBwrR3iB0CP?utm_source=generator" width="75%" height="352" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
+        </div>
+        <div class="confused">
+            <h4>CONFUSED</h4>
+            <iframe style="border-radius:12px" src="https://open.spotify.com/embed/playlist/63GnUl1NxDKld4ZjjzUCBc?utm_source=generator" width="75%" height="352" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
         </div>
     </section>
-    
+    <section class="videos">
+        <h2>SELF-HELP VIDEOS</h2>
+        <iframe width="560" height="315" src="https://www.youtube.com/embed/w-HYZv6HzAs?si=w9ABx7EzmGOQ6Qw4" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+        <iframe width="560" height="315" src="https://www.youtube.com/embed/Tqsz6fjvhZM?si=QUWEfT0ZS83waaSj" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe><br/>
+        <iframe width="560" height="315" src="https://www.youtube.com/embed/m3-O7gPsQK0?si=jw9ICMbDXarka_7r" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+        <iframe width="560" height="315" src="https://www.youtube.com/embed/c2OTHeCKsBE?si=8lis4lc9C1JLZQx2" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+    </section>
+    <section class="art">
+        <h2>ART THERAPY</h2>
+        <img src="./Images/painting1.jpg" width="35%" height="35%">
+        <img src="./Images/painting2.png" width="35%" height="20%">
+        <img src="./Images/painting3.jpg" width="35%" height="35%">
+    </section>
+    <section class="mindfulness">
+        <h2>MINDFULNESS PRACTICES</h2>
+        <img src="./Images/m1.jpg" width="35%" height="35%">
+        <img src="./Images/m3.png" width="35%" height="35%">
+    </section>
 </body>
-<footer>
+<footer style="background-color: white;">
     <div class="container">
         <footer class="row row-cols-1 row-cols-sm-2 row-cols-md-5 py-5 my-5 border-top">
           <div class="col mb-3">
