--- a/virtualpet.html
+++ b/virtualpet.html
@@ -107,7 +107,7 @@ button:hover {
         <button onclick="playWithPet('dog')">Play</button>
       </div>
       <div class="pet">
-        <img src="cat.gif" alt="Cat">
+        <img src="./cat.gif" alt="Cat">
         <h3>Cat</h3>
         <button onclick="feedPet('cat')">Feed</button>
         <button onclick="playWithPet('cat')">Play</button>
