--- a/profile.html
+++ b/profile.html
@@ -82,7 +82,7 @@
           <button onclick="playWithPet('dog')">Play</button>
         </div>
         <div class="pet">
-          <img src="/Images/cat.gif" alt="Cat">
+          <img src="./Images/cat.gif" alt="Cat">
           <h3>Cat</h3>
           <button onclick="feedPet('cat')">Feed</button>
           <button onclick="playWithPet('cat')">Play</button>
