--- a/assessments.html
+++ b/assessments.html
@@ -120,10 +120,10 @@ input[type="submit"]:hover {
                 <input type="date" placeholder="dd/mm/yy" id="q1"><br/>
         
                 <label for="q2">2.Hold on is it still Sunday or am I dreaming? What's the day today?</label><br/>
-                <input type="text" placeholder="day" id="q2"><br/>
+                <input type="text" placeholder="Monday" id="q2"><br/>
 
                 <label for="q3">3.Time to test your temporal prowess! Can you tell me what time it is? Tick-tock, make your guess!</label><br/>
-                <input type="time" placeholder="time" id="q3"><br/>
+                <input type="time" placeholder="morning" id="q3"><br/>
 
                 <label for="q4">4.What would you like to do today? </label><br/>
                 <input type="text" placeholder="Activities" id="q4"><br/>
